--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,7 +1,18 @@
-<h1>Recipes List</h1>
-
+<h1 class='recipe-heading'>Recipes List</h1>
+<%= link_to 'All Recipes', new_recipe_path %>
 <ul>
   <% @recipes.each do |recipe| %>
-    <li><%= recipe.name %></li>
+  <div class='recipe-container'>     
+        <div class='left-side'>
+          <h3>Recipe <%= recipe.id %> </h3>
+          <% if recipe.user == current_user %>
+            <%= link_to "Remove", recipe_path(recipe), method: :delete, class: "btn btn-danger" %>
+          <% end %>
+        </div> 
+         <div class='right-side'>
+          <li><%= recipe.description %></li> 
+         </div>
+           
+  </div>
   <% end %>
 </ul>
