--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,18 +1,22 @@
 <h1 class='recipe-heading'>Recipes List</h1>
-<%= link_to 'All Recipes', new_recipe_path %>
+
 <ul>
+<% if @recipes.blank? %>
+  <p>No recipe available</p>
+<% else %>
   <% @recipes.each do |recipe| %>
-  <div class='recipe-container'>     
-        <div class='left-side'>
-          <h3>Recipe <%= recipe.id %> </h3>
-          <% if recipe.user == current_user %>
-            <%= link_to "Remove", recipe_path(recipe), method: :delete, class: "btn btn-danger" %>
-          <% end %>
-        </div> 
-         <div class='right-side'>
-          <li><%= recipe.description %></li> 
-         </div>
-           
-  </div>
+    <div class='recipe-container'>     
+          <div class='left-side'>
+            <%= link_to recipe.name, recipe_path(recipe) %>
+            <% if recipe.user == current_user %>
+              <%= button_to "Remove", recipe_path(recipe), method: :delete, class: "btn btn-danger" %>
+            <% end %>
+          </div> 
+          <div class='right-side'>
+            <h2>Description: <%= recipe.description %> </h2>           
+          </div>           
+    </div>
+  <% end %>
   <% end %>
 </ul>
+<%= link_to "Add New Recipe", new_recipe_path %>
