--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,13 +21,15 @@
   list-style: none;
 }
 
-.recipe-heading {
+.recipe-heading,
+.create-recipe-header {
   text-align: center;
   padding-top: 2rem;
+  color: rgb(192, 89, 6);
 }
 
 .recipe-container {
-  border: 3px solid black;
+  border: 3px solid rgb(192, 89, 6);
   margin: 4rem;
   display: flex;
   padding: 1rem;
@@ -37,8 +39,82 @@
 
 .left-side {
   width: 30%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
 }
 
 .left-side h3 {
   margin-bottom: 1rem;
+}
+
+.recipe-name-btn {
+  color: rgb(192, 89, 6);
+  font-size: 1.3rem;
+}
+
+.btn-danger,
+.form-button {
+  background-color: #fff;
+  padding: 0.3rem;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: all 1000ms ease-in-out;
+}
+
+.form-button:hover,
+.btn-danger:hover {
+  font-size: 16px;
+  color: rgb(192, 89, 6);
+}
+
+.add-recipe {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  padding-right: 3rem;
+  text-decoration: none;
+  font-size: 21px;
+  transition: all 1000ms ease-in-out;
+}
+
+.add-recipe:hover {
+  font-size: 25px;
+  color: rgb(192, 89, 6);
+}
+
+/* Create Recipe Form */
+
+.create-recipe-header {
+  font-size: 2rem;
+}
+
+.li-box {
+  padding-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  row-gap: 1rem;
+}
+
+.li-box {
+  width: 30%;
+  margin: 0 auto;
+  margin-top: 2rem;
+  border: 2px solid rgb(192, 89, 6);
+}
+
+.form-div {
+  padding: 0.5rem;
+}
+
+.form-div input {
+  padding: 0.5rem;
+}
+
+.form-button {
+  margin-bottom: 2rem;
 }
