--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,14 +1,9 @@
-<%= link_to "Sign In", new_user_session_path %>
-<%= render partial: "shared/logout"%>
-
 <section class="container">
   <h3 class="fw-semibold">Your list of foods</h3>
   <div class="d-flex justify-content-end p-4">
-    <a href="<%= new_food_path %>">
-  <button class="btn btn-sm btn-primary">Add Food</button>
-</a>
-
+     <%= link_to "Add Food", new_user_food_path(current_user), class: "btn btn-sm btn-primary" %>
   </div>
+
   <table class="table table-sm table-bordered">
     <thead class="bg-light">
       <tr>
@@ -26,10 +21,10 @@
           <td> <%= food.measurement_unit %></td>
           <td> $<%= food.price %> </td>
           <td> <%= food.quantity %> </td>
-          <td><%= button_to "Delete", food_path(food), method: :delete, data: {confirm: "Are you sure you want to delete this post?"}, class: "btn btn-sm btn-danger"  %></td>
+          <td><%= button_to "Delete", user_food_path(@user, food), method: :delete, data: { confirm: "Are you sure you want to delete this post?" }, class: "btn btn-sm btn-danger" %></td>
         </tr>
       <% end %>
     </tbody>
   </table>
-  <%= link_to 'All Recipes', recipes_path %>
 </section>
+<%= render partial: "shared/logout"%>
