--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,12 +1,10 @@
 <section class="container">
   <div class="pt-4 pb-4 d-flex justify-content-between">
     <h3 class="d-flex align-self-start">Add a new food</h3>
-    <a href="<%= url_for(controller: 'foods', action: 'index')  %>">
-      <button class="btn btn-sm btn-warning">Cancel</button>
-    </a>
+    <%= link_to "Cancel", user_foods_path(current_user), class: "btn btn-sm btn-warning" %>
   </div>
   <div>
-    <%= form_with model: [@user, @food],  url: foods_path do |form| %>
+    <%= form_with model: [@user, @food],  url: user_foods_path(current_user) do |form| %>
       <div class="mb-2">
         <%=
           form.text_field :name,
@@ -44,3 +42,4 @@
     <% end %>
   </div>
 </section>
+<%= render partial: "shared/logout"%>
