Fix linter error

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -120,11 +120,13 @@
   width: 60px;
   height: 34px;
 }
+
 .toggle-switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
+
 .slider {
   position: absolute;
   cursor: pointer;
@@ -136,7 +138,8 @@
   transition: 0.4s;
   border-radius: 34px;
 }
-.slider:before {
+
+.slider::before {
   position: absolute;
   content: '';
   height: 26px;
@@ -147,9 +150,11 @@
   transition: 0.4s;
   border-radius: 50%;
 }
+
 input:checked + .slider {
   background-color: #2196f3;
 }
-input:checked + .slider:before {
+
+input:checked + .slider::before {
   transform: translateX(26px);
 }
