Fix linter errors

--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -21,7 +21,7 @@
                 <%= form.label :public %>
                 <%= form.select :public, options_for_select(['true', 'false']), prompt: 'Select a category' %>
             </div>
-        <%= form.submit "Create Post", class: "button form-button" %>
+        <%= form.submit "Create recipe", class: "button form-button" %>
         <% end %>
         <%= render partial: "shared/logout"%>
     </li>
